--- a/templates/users/perfil.html
+++ b/templates/users/perfil.html
@@ -1,3 +1,50 @@
-{{user.id}}
-{{user.username}}
-{{user.client.fund}}
+<body>
+    {% include 'partials/_header.html' %}
+    <div class="pt-12">
+        <div class="flex justify-center border-blue-600 border-b-4 mx-auto mb-2">
+            <p class="font-bold text-blue-600 ">Editar usuário</p>
+        </div>
+        
+        <div class="w-full container mx-auto flex flex-wrap items-center justify-center p-2">
+            <form action="{% url 'change_information' user.id %}" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="grid grid-cols-2 gap-4 justify-center place-items-center bg-gray-300 rounded p-4">
+                    <div>
+                        <label class="block text-gray-800 text-2xl text-center" for="username">Nome: </label>
+                        <input type="text" id="username" class="rounded mb-2 p-2 text-center" name="username" 
+                        value="{{user.username}}" required></input>
+                    </div>
+                    <div>
+                        <label class="block text-gray-800 text-2xl text-center" for="file">Email:
+                        </label>
+                        <input class="rounded mb-2 p-2 text-center" name="email" 
+                        value="{{user.email}}" required></input>
+                    </div>
+                    <div class="w-full"> 
+                        <label class="block text-gray-800 text-2xl text-center" for="file">Fundos:</label>
+                        <p class="rounded mb-2 p-2 bg-gray-400 flex justify-center w-full">{{user.client.fund}}</p>
+                    </div>
+                    <div>
+                        <label class="block text-gray-800 text-2xl text-center" for="file">Nova senha:</label>
+                        <input class="rounded mb-2 p-2" type="text" class="p-1" placeholder="Não alterar, deixar em branco" name="new_password"></input>
+                    </div>
+                    <div>
+                        <label class="block text-gray-800 text-2xl text-center" for="file">Confirmar senha:</label>
+                        <input class="rounded p-2" type="text" class="p-1" name="confirm_new_password"></input>
+                    </div>
+                    <div>
+                        <br>
+                        <button class="bg-blue-800 flex justify-center align-items text-white rounded-md p-2" type="submit">Alterar informações</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    {% include 'partials/_footer.html' %}
+</body>
+
+<script>
+    function exibirCriarConta() {
+        location.href = "{% url 'create_user' %}";
+    }
+</script>
