Front end de editar produto finalizado, correção de bug em alterar informações e adição de alertas para erros e sucessos

--- a/templates/products/buy-product.html
+++ b/templates/products/buy-product.html
@@ -32,7 +32,12 @@
                 R${{ product.price }}.</p>
                 <p class="text-gray-600 mb-2">A quantidade disponível para compra: {{ product.quantity }}</p>
                 <p class="text-gray-600 mb-2">Seu saldo é de R${{ user.client.fund }}</p>
-                
+                <span class="text-gray-600 mb-2">Status do produto:</span>
+                {% if product.sold %}
+                    <span class="text-gray-600 mb-2">Vendido</span>
+                {% else %}
+                    <span class="text-gray-600 mb-2">A venda</span>
+                {% endif %}
             </div>
             <img class="w-1/4 h-1/5" src="{{product.photo.url}}" alt="Foto do produto">
         </div>
@@ -42,9 +47,9 @@
             <form action="{% url 'confirmed_purchase' product.id user.id %}" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div>
-                    <label for="file"><b>Unidades para compra</b></label>
+                    <label for="file"><b>Unidades para compra:</b></label>
                     <input type="text" id="product_price{{ product.id }}" value="{{ product.price }}" hidden/>
-                    <input type="number" id="product_quantity{{ product.id }}" min="1" class="form-control" value="{{ quantity }}" name="buy_quantity" onblur="PriceProduct('{{ product.id }}')" placeholder="Ex. 20" required>
+                    <input type="number" id="product_quantity{{ product.id }}" min="1" class="border-b-4 border-gray-600 text-center mb-2" value="{{ quantity }}" name="buy_quantity" onblur="PriceProduct('{{ product.id }}')" placeholder="Ex. 20" required>
                     <script>
                         AddListId('{{product.id}}')
                     </script>
@@ -56,6 +61,9 @@
                 <div class="text-center">
                     <button style="background: #006eb5;" class="w-full flex justify-center align-items text-white rounded-md p-4 mb-2" type="submit">Finalizar compra</button>
                     <a style="background: #006eb5;" class="flex justify-center align-items text-white rounded-md p-4" href="{% url 'cancel_purchase' product.id %}">Cancelar Compra</a>
+                </div>
+                <div class="mt-4">
+                    {% include 'partials/_alerts.html' %}
                 </div>
             </form>
         </div>
