--- a/templates/users/perfil.html
+++ b/templates/users/perfil.html
@@ -37,6 +37,9 @@
                         <button class="bg-blue-800 flex justify-center align-items text-white rounded-md p-2" type="submit">Alterar informações</button>
                     </div>
                 </div>
+                <div class="mt-2">
+                    {% include 'partials/_alerts.html' %}
+                </div>
             </form>
         </div>
     </div>
