--- a/templates/products/create-product.html
+++ b/templates/products/create-product.html
@@ -14,50 +14,50 @@
                     {% csrf_token %}
                     <div class="">
                         <div class="mb-2">
-                            <label class="bg-blue-400 rounded-l p-1" for="product_name"><b>Nome:</b></label>
+                            <label class="p-1" for="product_name"><b>Nome:</b></label>
                             <input type="text" id="product_name" class="p-1" name="product_name"
                                 placeholder="Ex. Televisão" required>
                         </div>
                         <div class="">
-                            <label class="inline-block bg-blue-400 rounded-l p-1 mb-1" for="file"><b>Descrição:</b>
+                            <label class="inline-block p-1 mb-1" for="file"><b>Descrição:</b>
                             </label>
                             <textarea class="w-full mb-2" name="description" cols="30" rows="10"
                             placeholder="Ex. Tevelisão LG Full HD" required></textarea>
                             
                         </div>
                         <div class="mb-2">
-                            <label class="bg-blue-400 rounded-l p-1" for="file"><b>Preço:</b></label>
+                            <label class="p-1" for="file"><b>Preço:</b></label>
                             <input type="number" min="0" step=".01" class="p-1" name="price"
                                 placeholder="Ex. 9,99" required>
                         </div>
                         <div class="mb-2">
-                            <label class="bg-blue-400 rounded-l p-1" for="file"><b>Quantidade:</b></label>
+                            <label class="p-1" for="file"><b>Quantidade:</b></label>
                             <input type="number" min="1" class="p-1" name="quantity" placeholder="Ex. 20"
                                 required>
                         </div>
                         <div class="mb-2">
-                            <label class="inline-block bg-blue-400 rounded-l p-1 mb-1" for="file"><b>Resumo do produto:</b></label>
+                            <label class="inline-block p-1 mb-1" for="file"><b>Resumo do produto:</b></label>
                             <textarea class="w-full" name="product_resume" cols="30" rows="10"
                                 placeholder="Ex. Tevelisão massa" required></textarea>
                         </div>
                         <div class="mb-2 col-lg-3">
-                            <label class="bg-blue-400 rounded-l p-1" for="file" for="file"><b>Comentário 1:</b></label>
+                            <label class="p-1" for="file" for="file"><b>Comentário 1:</b></label>
                             <input type="text" class="p-1" name="comment1" placeholder="Ex. Tv incrível"
                                 required>
                         </div>
                         <div class="mb-2 col-lg-3">
-                            <label class="bg-blue-400 rounded-l p-1" for="file" for="file"><b>Comentário 2:</b></label>
+                            <label class="p-1" for="file" for="file"><b>Comentário 2:</b></label>
                             <input type="text" class="p-1" name="comment2"
                                 placeholder="Ex. Várias informações sobre o produto" required>
                         </div>
                         <div class="mb-2 col-lg-3">
-                            <label class="bg-blue-400 rounded-l p-1" for="file" for="file"><b>Informações do produto:</b></label>
+                            <label class="p-1" for="file" for="file"><b>Informações do produto:</b></label>
                             <input type="text" class="p-1" name="product_information" required>
                         </div>
                         <div class="mb-2 col-lg-3">
                             <label for="file"><b>Razões para comprar(Limite 10)</b></label>
 
-                            <input type="button" onclick="AddInput()" value="Clique Aqui" />
+                            <input type="button" onclick="AddInput()" value="Criar razão"/>
                             <div id="divForm">
 
                             </div>
@@ -81,74 +81,4 @@
 </body>
 
 
-<script>
-    var CountProds = 1;
-    function AddInput() {
-        if (CountProds <= 10) {
-            h = CountProds;
-            var form = document.getElementById("divForm");
-            var input = document.createElement("INPUT");
-            var div = document.createElement("div");
-
-            input.setAttribute("type", "text");
-            input.setAttribute("id", "reasons_to_buy" + h);
-            input.setAttribute("name", "reasons_to_buy" + h);
-            input.setAttribute("required", "");
-
-            div.setAttribute("id", "ref" + h);
-            div.setAttribute("name", "ref" + h);
-            div.setAttribute("class", "mb-2 ml-2")
-
-            form.appendChild(div)
-            div.appendChild(input);
-            CountProds++;
-        }
-    }
-
-
-
-    // window.onbeforeunload = function() {
-    //     sessionStorage.setItem("product_name", $('#product_name').val());
-    //     sessionStorage.setItem("description", $('#inputdescription').val());
-    //     sessionStorage.setItem("product_resume", $('#inputproduct_resume').val());
-    //     sessionStorage.setItem("subject", $('#inputSubject').val());
-    //     sessionStorage.setItem("comment1", $('#inputcomment1').val());
-    //     sessionStorage.setItem("comment2", $('#inputcomment2').val());
-    //     sessionStorage.setItem("product_information", $('#inputproduct_information').val());
-    //     sessionStorage.setItem("photo", $('#inputphoto').val());
-    //     sessionStorage.setItem("teste", 123);
-    // }
-
-    window.onload = function () {
-
-
-        // var teste = localStorage.getItem("teste");
-        // if (teste !== null) 
-        //  $('#teste').val("teste");
-
-        // var product_name = localStorage.getItem("product_name");
-        // if (product_name !== null) 
-        //  $('#product_name').val("product_name");
-
-        // var description = localStorage.getItem("product_description");
-        // if (description !== null) $('#inputdescription').val("description");
-
-        // var product_resume = localStorage.getItem("product_product_resume");
-        // if (product_resume !== null) $('#inputproduct_resume').val("product_resume");
-
-        // var subject = localStorage.getItem("product_subject");
-        // if (subject !== null) $('#inputsubject').val("subject");
-
-        // var comment1 = localStorage.getItem("product_comment1");
-        // if (comment1 !== null) $('#inputcomment1').val("comment1");
-
-        // var comment2 = localStorage.getItem("product_comment2");
-        // if (comment2 !== null) $('#inputcomment2').val("comment2");
-
-        // var product_information = localStorage.getItem("product_product_information");
-        // if (product_information !== null) $('#inputproduct_information').val("product_information");
-
-        // var photo = localStorage.getItem("product_photo");
-        // if (photo !== null) $('#inputphoto').val("photo");
-    }
-</script>
+<script src="{% static 'js/crudProduct.js' %}"></script>
