--- a/templates/products/product-page.html
+++ b/templates/products/product-page.html
@@ -48,9 +48,12 @@
           <a style="min-width: 165.75px; max-width: 218.35; margin-right: 4px;" href="{% url 'buy_product' product.id 1%}" class="btn btn-transparent">Compre agora</a>
           <!-- Mensagem que precisa está logado para colocar no carrinho, solução provisória -->
           {% if user.is_authenticated %}
-          <a href="{% url 'add_cart' product.id user.id%}" class="btn btn-transparent">Adicionar carrinho</a>
+          <a href="{% url 'add_cart' product.id user.id %}" class="btn btn-transparent">Adicionar carrinho</a>
           {% endif %}
           <h2 class="m-0">Por apenas R${{ product.price }}</h2>
+          <div class="flex justify-center items-center mt-2 ">
+            {% include 'partials/_alerts.html' %}
+          </div>
         </div>
       </header>
       
