Projeto completo para deploy

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta name="author" content="" />
-  <link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" />
+  
   <!--Replace with your tailwind.css once created-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
