--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
 
 <nav id="header" class="fixed w-full z-30 top-0 text-white">
     <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
